Hero and Features updated

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
           <h2 hidden class="section-title">Benefits</h2>
           <ul class="features list">
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="antenna" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="li-title">Strategy</h3>
               <p class="body-text">
                 Our goal is to identify the business problem to walk away with
@@ -92,6 +97,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="antenna" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="li-title">Punctuality</h3>
               <p class="body-text">
                 Bring the key message to the brand's audience for the best price
@@ -99,6 +109,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="antenna" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="li-title">Diligence</h3>
               <p class="body-text">
                 Research and confirm brands that present the strongest digital
@@ -106,6 +121,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="antenna" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="li-title">Technologies</h3>
               <p class="body-text">
                 Design practice focused on digital experiences. We bring forth a
