--- a/index.html
+++ b/index.html
@@ -443,6 +443,9 @@
           </ul>
         </div>
       </section>
+
+      <!-- Section 4 -->
+
       <section class="customers-section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
@@ -496,14 +499,49 @@
 
     <!-- Footer section-->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="bottom-logo link"
-          >Web<span class="logo-foot">Studio</span></a
-        >
-        <p class="text-foot">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="logo-container">
+          <a href="./index.html" class="bottom-logo link"
+            >Web<span class="logo-foot">Studio</span></a
+          >
+          <p class="text-foot">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="media-container">
+          <p class="media-text">Social media</p>
+          <ul class="media-list list">
+            <li class="media-item">
+              <a class="media-link link" href="">
+                <svg class="media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a class="media-link link" href="">
+                <svg class="media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a class="media-link link" href="">
+                <svg class="media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="media-item">
+              <a class="media-link link" href="">
+                <svg class="media-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
