--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
           <!-- Project Cards -->
           <ul class="projects list">
             <li class="project-item">
-              <a href="" class="link">
+              <a href="" class="pc-link link">
                 <img src="./images/pc-1.jpg" alt="banking app" />
                 <div class="pc-content">
                   <h2 class="card-title">Banking App Interface Concept</h2>
@@ -91,7 +91,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img
                   src="./images/pc-2.jpg"
                   alt="cashless payment using smartphone"
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img src="./images/pc-3.jpg" alt="laptop and smartphone" />
                 <div class="pc-content">
                   <h2 class="card-title">Meditation App</h2>
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img src="./images/pc-4.jpg" alt="person driving a car" />
                 <div class="pc-content">
                   <h2 class="card-title">Taxi Service</h2>
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img
                   src="./images/pc-5.jpg"
                   alt="smartphone walpapers depicting moon"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img src="./images/pc-6.jpg" alt="girl holding a smartphone" />
                 <div class="pc-content">
                   <h2 class="card-title">Online Courses</h2>
@@ -142,7 +142,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img src="./images/pc-7.jpg" alt="instagram stories" />
                 <div class="pc-content">
                   <h2 class="card-title">Instagram Stories Concept</h2>
@@ -151,7 +151,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img
                   src="./images/pc-8.jpg"
                   alt="person carrying a bag of vegetables"
@@ -163,7 +163,7 @@
               </a>
             </li>
             <li class="project-item">
-              <a href="" class="pc link">
+              <a href="" class="pc-link link">
                 <img src="./images/pc-9.jpg" alt="a cup of coffee" />
                 <div class="pc-content">
                   <h2 class="card-title">Fresh Coffee</h2>
