--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg class="antenna" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="li-title">Strategy</h3>
@@ -99,7 +99,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg class="antenna" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
+                  <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="li-title">Punctuality</h3>
@@ -111,7 +111,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg class="antenna" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="li-title">Diligence</h3>
@@ -123,7 +123,7 @@
             <li class="features-item">
               <div class="features-icon">
                 <svg class="antenna" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="li-title">Technologies</h3>
@@ -196,7 +196,7 @@
                       aria-label="Instagram icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icon.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -209,7 +209,7 @@
                       aria-label="Twitter icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icon.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -222,7 +222,7 @@
                       aria-label="Facebook icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icon.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -235,7 +235,7 @@
                       aria-label="Linkein icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icon.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -262,7 +262,7 @@
                       aria-label="Instagram icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icon.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -275,7 +275,7 @@
                       aria-label="Twitter icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icon.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -288,7 +288,7 @@
                       aria-label="Facebook icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icon.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -301,7 +301,7 @@
                       aria-label="Linkein icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icon.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -328,7 +328,7 @@
                       aria-label="Instagram icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icon.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -341,7 +341,7 @@
                       aria-label="Twitter icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icon.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -354,7 +354,7 @@
                       aria-label="Facebook icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icon.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -367,7 +367,7 @@
                       aria-label="Linkein icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icon.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -394,7 +394,7 @@
                       aria-label="Instagram icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icon.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -407,7 +407,7 @@
                       aria-label="Twitter icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
+                        <use href="./images/icon.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -420,7 +420,7 @@
                       aria-label="Facebook icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
+                        <use href="./images/icon.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -433,7 +433,7 @@
                       aria-label="Linkein icon"
                     >
                       <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
+                        <use href="./images/icon.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -448,47 +448,47 @@
 
       <section class="customers-section">
         <div class="container">
-          <h2 class="section-title">Customers</h2>
+          <h2 class="customers-title section-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
               <a class="customer-link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#customer-1"></use>
+                  <use href="./images/icon.svg#customer-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customer-link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#customer-2"></use>
+                  <use href="./images/icon.svg#customer-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customer-link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#customer-3"></use>
+                  <use href="./images/icon.svg#customer-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customer-link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#customer-4"></use>
+                  <use href="./images/icon.svg#customer-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customer-link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#customer-5"></use>
+                  <use href="./images/icon.svg#customer-5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customer-link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#customer-6"></use>
+                  <use href="./images/icon.svg#customer-6"></use>
                 </svg>
               </a>
             </li>
@@ -515,28 +515,28 @@
             <li class="media-item">
               <a class="media-link link" href="">
                 <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#instagram"></use>
+                  <use href="./images/icon.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="media-item">
               <a class="media-link link" href="">
                 <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#twitter"></use>
+                  <use href="./images/icon.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="media-item">
               <a class="media-link link" href="">
                 <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#facebook"></use>
+                  <use href="./images/icon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="media-item">
               <a class="media-link link" href="">
                 <svg class="media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#linkedin"></use>
+                  <use href="./images/icon.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
